# unopt-py

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
src/unopt/: __init__.py  core.py  core_test.py
