[metadata]
name = unopt
version = 0.1.0
url = https://github.com/odashi/unopt-py
project_utls =
    Bug Tracker = https://github.com/odashi/unopt-py/issues
author = Yusuke Oda
author_email = yus.takara@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT License
description = Utility functions to unwrap Optional values.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    none
    optional
    rust

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src